--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,8 @@
     <GridLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:layout_weight="1"
         android:alignmentMode="alignMargins"
         android:columnCount="2"
@@ -26,6 +27,7 @@
             android:id="@+id/buttonLearnedWordsList"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:padding="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
@@ -38,6 +40,7 @@
             android:id="@+id/buttonNotLearnedWordsList"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:padding="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
@@ -50,6 +53,7 @@
             android:id="@+id/buttonLearnedWord"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:padding="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
@@ -62,6 +66,7 @@
             android:id="@+id/buttonNotLearnedWord"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:padding="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
